<resources>
    <string name="app_name">Fleet Owner</string>
    <!--Debug Google api key-->
    <string name="google_app_id">AIzaSyCQQaDHh7sz-35CvROWKngxGPzzbEJdfUk</string>

    <!--Released Google api key-->
    <!--<string name="google_app_id">AIzaSyCHLcN4FVT29tkXZcOSfNRL9C9CKar6d_g</string>-->

    <string name="action_settings">Settings</string>

    <string name="empty">empty</string>
    <string name="space">&#160;</string>
    <string name="towithspaces">&#160;to&#160;</string>
    <string name="crn">CRN -&#160;</string>
    <string name="comma_spraction">,&#160;</string>
    <string name="rupee">₹&#160;</string>
    <string name="rs">Rs&#160;</string>
    <string name="ton">&#160;Ton</string>
    <string name="nickname">NickName -&#160;</string>

    <!--slide menus-->
    <string name="mybooking">My Bookings</string>
    <string name="trucks">Trucks</string>
    <string name="trucksrequest">Truck Requests</string>
    <string name="drivers">Drivers</string>
    <string name="aboutus">About us</string>
    <string name="callcarrus">Call Carrus</string>
    <string name="signout">Sign Out</string>
    <string name="signup_header">Sign Up</string>
    <string name="myprofile">My Profile</string>
    <string name="term_privacy">Terms | Privacy Policy</string>
    <string name="bookingdetails">Booking Details</string>
    <string name="crnsubject">CRN Number</string>
    <string name="share_chooser_text">Share using…</string>
    <string name="update_message">Do you want to update the app?</string>
    <string name="critical_update_message">Critical update found, you have to update the app</string>


    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/mybooking</item>
        <item>@string/trucksrequest</item>
        <item>@string/trucks</item>
        <item>@string/drivers</item>
        <item>@string/aboutus</item>
        <item>@string/callcarrus</item>
        <item>@string/signout</item>
    </string-array>

    <!-- naviagtion drawer icons-->
    <array name="nav_drawer_icons">
        <item>@drawable/home_btn_selector</item>
        <item>@drawable/notification_btn_selector</item>
        <item>@drawable/truck_btn_selector</item>
        <item>@drawable/driver_btn_selector</item>
        <item>@drawable/aboutus_btn_selector</item>
        <item>@drawable/navcall_btn_selector</item>
        <item>@drawable/signout_btn_selector</item>
    </array>

    <!-- Errors-->
    <string name="email_required">Email id is required</string>
    <string name="entertrackid">Tracking id is required</string>
    <string name="enterdrivername">Enter driver name</string>
    <string name="passwd_required">Password is required</string>
    <string name="validemail_required">Please enter valid email id</string>
    <string name="nointernetconnection">No internet connection found. Please try again</string>
    <string name="nonotesfound">No note Found</string>
    <string name="nodetailsfound">No details found</string>
    <string name="podnotfound">No POD found</string>
    <string name="invoicenotfound">No invoice found</string>
    <string name="consignmntnotfound">No consignment note found</string>
    <string name="quotesamountrequired">Bid amount required</string>
    <string name="selecetDriver">Please, select driver…</string>
    <string name="phonelimit">Phone number must be 10 digits</string>
    <string name="choose_image">Choose image from…</string>
    <string name="trucknotfound">Truck Not found, Please choose another driver</string>
    <string name="fieldnotempty">Field can\'t be empty</string>
    <string name="select_value">Please select one value</string>
    <string name="passwdnotmacth">Password not matched</string>


    <string name="nodriverfound">No Drivers</string>
    <string name="noupcmingfound">No Upcoming Bookings</string>
    <string name="nopastfound">No Past Bookings</string>
    <string name="nonewreqfound">No New Requests</string>
    <string name="nopendingquotesfound">No Pending Quotes</string>
    <string name="nopendingassignfound">No Pending Assignments</string>

    <!--text-->
    <string name="forgetpasswddetails">Enter email address and link would be sent to you to reset your password</string>
    <string name="searchtruck">Search Truck Number</string>
    <string name="pickup">PICK UP</string>
    <string name="dropoff">DROP OFF</string>
    <string name="galery">Gallery</string>
    <string name="camera">Camera</string>

    <!-- Signout Dialog-->
    <string name="quit">Sign Out!</string>
    <string name="really_quit">Are you sure to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Login Screen Text-->
    <string name="email">E-mail</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="submit">SUBMIT</string>
    <string name="forgotpasswd">FORGOT PASSWORD ?</string>
    <string name="signup">NOT A MEMBER YET? SIGN UP</string>
    <string name="send">SEND</string>
    <string name="forgotpasswdlable">Forgot Password</string>
    <string name="rememberme">&#160;&#160;REMEMBER ME</string>

    <!-- My booking screen text-->
    <string name="upcming">Upcoming</string>
    <string name="past">Past</string>
    <string name="activate">ACTIVATE</string>
    <string name="ongoing">On Going</string>

    <!-- My Profile screen text-->
    <string name="company_name">COMPANY NAME</string>
    <string name="user_email">EMAIL</string>
    <string name="user_phn">PHONE NUMBER</string>
    <string name="user_add">ADDRESS</string>
    <string name="user_type_company">TYPE OF COMPANY</string>

    <!--Driver Screen text-->
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="searchdriver">Search Drivers</string>
    <string name="licenseexp">License Exp. </string>

    <!--truck screen text-->
    <string name="newrequests">New\nrequests</string>
    <string name="pendingquotes">Pending\nquotes</string>
    <string name="pendingquotes_head">Pending Quotes</string>
    <string name="pendingassign">Pending\nassignments</string>
    <string name="pendingassign_head">Pending Assignments</string>
    <string name="typecargo">Type of cargo</string>
    <string name="weight">Weight</string>
    <string name="budget">Budget</string>
    <string name="finalbid">Final Bid</string>
    <string name="offrdbid">Offered Bid</string>

    <!--truck details screen text-->
    <string name="newRequest">New Requests</string>
    <string name="cargodetails">CARGO DETAILS</string>
    <string name="documents">DOCUMENTS</string>
    <string name="shippernotes">SHIPPER\'S NOTES</string>
    <string name="typeofcargo">Type of Cargo</string>
    <string name="quote">QUOTE</string>
    <string name="modify">MODIFY</string>
    <string name="ignore">IGNORE</string>
    <string name="assign_driver">ASSIGN DRIVER</string>

    <string name="notes">Notes…</string>
    <string name="trackingavail">Tracking Available</string>

    <!--Booking details Text-->
    <string name="paymentmode">PAYMENT MODE</string>
    <string name="totalcost">TOTAL COST</string>
    <string name="viewpod">VIEW POD</string>
    <string name="notes_cap">NOTES</string>
    <string name="pod">POD</string>
    <string name="invoice">Invoice</string>
    <string name="condignmntnotes">Consignment Notes</string>

    <!--Dialog Button Text-->
    <string name="tryagain">Retry</string>
    <string name="exit">Exit</string>

    <!--Sign up screen text-->
    <string name="fullname">Full Name*</string>
    <string name="emailid">Email ID*</string>
    <string name="password_">Password*</string>
    <string name="cnfrmpassword">Confirm Password*</string>
    <string name="companyname">Company Name*</string>
    <string name="areaoprations">Area of Operations</string>
    <string name="typecargohandle">Type of Cargo Handled</string>
    <string name="numbertruckowner">Number of Trucks Owned</string>
    <string name="phonenumber">Mobile Number*</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="zipcode">Zip Code</string>
    <string name="city">City Town</string>
    <string name="country">Country</string>
    <string name="fleetowner">FLEET OWNER</string>
    <string name="broker">BROKER</string>
    <string name="enterotp">Enter OTP here</string>
    <string name="enterotphere">Enter your OTP</string>
    <string name="consignmntnote">Consignment Note</string>
    <string name="bycarrus">BY CARRUS</string>
    <string name="byme">BY ME</string>
</resources>
