<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginTop="@dimen/ten"
        android:background="@drawable/tab_background"
        android:orientation="horizontal"
        android:padding="@dimen/two">

        <TextView
            android:id="@+id/newrequestTV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_background"
            android:gravity="center"
            android:padding="@dimen/ten"
            android:text="@string/newrequests"
            android:textColor="@color/windowBackground"
            android:textSize="@dimen/big_font" />

        <TextView
            android:id="@+id/pendingquotesTV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/two"
            android:layout_marginRight="@dimen/two"
            android:layout_weight="1"
            android:background="@drawable/tab_square_background_white"
            android:gravity="center"
            android:padding="@dimen/ten"
            android:text="@string/pendingquotes"
            android:textColor="@color/tabcolor_dark"
            android:textSize="@dimen/big_font" />

        <TextView
            android:id="@+id/pendingassignTV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_past_background_white"
            android:gravity="center"
            android:padding="@dimen/ten"
            android:text="@string/pendingassign"
            android:textColor="@color/tabcolor_dark"
            android:textSize="@dimen/big_font" />

    </LinearLayout>

    <!--<FrameLayout-->
    <!--android:id="@+id/bookingcontainer_body"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="1" />-->
    <android.support.v4.view.ViewPager
        android:id="@+id/vpPager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"></android.support.v4.view.ViewPager>

</LinearLayout>