<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginTop="@dimen/ten"
        android:background="@drawable/tab_background"
        android:orientation="horizontal"
        android:padding="@dimen/two"
        android:weightSum="1">

        <TextView
            android:id="@+id/upcomingTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/tab_background"
            android:gravity="center"
            android:padding="@dimen/ten"
            android:text="@string/upcming"
            android:textColor="@color/windowBackground"
            android:textSize="@dimen/tab_font" />

        <TextView
            android:id="@+id/pastTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/tab_past_background_white"
            android:gravity="center"
            android:padding="@dimen/ten"
            android:text="@string/past"
            android:textColor="@color/tabcolor_dark"
            android:textSize="@dimen/tab_font" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/searchEdtTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/windowBackground"
            android:drawableLeft="@mipmap/icon_search"
            android:drawablePadding="@dimen/five"
            android:hint="@string/searchdriver"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="@dimen/ten"
            android:textSize="@dimen/mid_fond" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/point_five"
            android:background="@color/gray_text" />
    </LinearLayout>
    <!--<FrameLayout-->
    <!--android:id="@+id/bookingcontainer_body"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="1" />-->

    <android.support.v4.view.ViewPager
        android:id="@+id/vpPager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

</LinearLayout>