<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/ten"
    android:paddingTop="@dimen/ten"
    android:weightSum="1">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.24">

        <RelativeLayout
            android:layout_width="@dimen/mediumhieght"
            android:layout_height="@dimen/mediumhieght"
            android:layout_centerInParent="true"
            android:background="@drawable/circle">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/dateTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-12dp"
                    android:text="05"
                    android:textColor="@color/windowBackground"
                    android:textSize="@dimen/toolarge_font" />

                <TextView
                    android:id="@+id/monthTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OCT"
                    android:textColor="@color/windowBackground"
                    android:textSize="@dimen/mid_fond" />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.76"
        android:orientation="vertical"
        android:paddingLeft="@dimen/five"
        android:paddingRight="@dimen/five">

        <com.carrus.fleetowner.utils.CapitalizedTextView
            android:id="@+id/addressTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/low_font"

            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.carrus.fleetowner.utils.CapitalizedTextView
                android:id="@+id/typeCargoTVLable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/typecargo"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/low_font" />

            <com.carrus.fleetowner.utils.CapitalizedTextView
                android:id="@+id/typeCargoTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/typeCargoTVLable"
                android:gravity="right"
                android:text="@string/typecargo"
                android:textColor="@color/green"
                android:textSize="@dimen/low_font" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/weightTVlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/weight"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/low_font" />

            <com.carrus.fleetowner.utils.CapitalizedTextView
                android:id="@+id/weightTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/weightTVlabel"
                android:gravity="right"
                android:textColor="@color/green"
                android:textSize="@dimen/low_font" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/budgetTVlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/budget"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/low_font" />

            <TextView
                android:id="@+id/budgetTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/budgetTVlabel"
                android:gravity="right"
                android:textColor="@color/green"
                android:textSize="@dimen/low_font" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/offerBidLayout"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/offerBidTVlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                android:text="@string/offrdbid"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/low_font" />

            <TextView
                android:id="@+id/offerBidTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/offerBidTVlabel"
                android:gravity="right"
                android:textColor="@color/green"
                android:textSize="@dimen/low_font" />
        </RelativeLayout>

    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:layout_weight="0.38"-->
    <!--android:gravity="right|bottom"-->
    <!--android:orientation="vertical"-->
    <!--android:paddingLeft="@dimen/five"-->
    <!--android:paddingRight="@dimen/five">-->

    <!--<TextView-->
    <!--android:id="@+id/timeTxtView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center_vertical"-->
    <!--android:text="Time"-->
    <!--android:textColor="@android:color/darker_gray"-->
    <!--android:textSize="@dimen/low_font" />-->

    <!--<TextView-->
    <!--android:id="@+id/statusTxtView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center_vertical"-->
    <!--android:text="Status"-->
    <!--android:textColor="@android:color/darker_gray"-->
    <!--android:textSize="@dimen/low_font" />-->

    <!--<TextView-->
    <!--android:id="@+id/priceTxtView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center_vertical"-->
    <!--android:text="Price"-->
    <!--android:textColor="@android:color/darker_gray"-->
    <!--android:textSize="@dimen/low_font" />-->
    <!--</LinearLayout>-->

</LinearLayout>